tests/success/move_construct_short_circuit.bz
import resource;

function test()
{
	(consteval {
		let v1 = [complex_resource_t]();
		let v2 = [complex_resource_t]();
		let b = false;
		(b && (v2 = move v1, true));
	});
}
